src/snapshots/aidl_parser__ast__tests__package2.snap
---
source: src/ast.rs
expression: "rules::package(input, &lookup(input))?"

---
Package(
  name: "x.y.z",
  symbol_range: "...",
)
