src/snapshots/aidl_parser__ast__tests__parcelable_with_errors.snap
---
source: src/ast.rs
expression: "rules::parcelable(input, &lookup(input), &mut diagnostics)?"

---
Parcelable(
  name: "Tomato",
  members: [
    Member(
      name: "member1",
      member_type: Type(
        name: "int",
        kind: Primitive,
        generic_types: [],
        definition: None,
        symbol_range: "...",
      ),
      symbol_range: "...",
      doc: None,
      full_range: "...",
    ),
    Member(
      name: "member3",
      member_type: Type(
        name: "String",
        kind: String,
        generic_types: [],
        definition: None,
        symbol_range: "...",
      ),
      symbol_range: "...",
      doc: None,
      full_range: "...",
    ),
  ],
  annotations: [],
  doc: None,
  full_range: "...",
  symbol_range: "...",
)
