src/snapshots/aidl_parser__ast__tests__type_array.snap
---
source: src/ast.rs
expression: "rules::type_(input, &lookup(input))?"

---
Type(
  name: "Array",
  kind: Array,
  generic_types: [
    Type(
      name: "float",
      kind: Primitive,
      generic_types: [],
      definition: None,
      symbol_range: "...",
    ),
  ],
  definition: None,
  symbol_range: "...",
)
