src/snapshots/aidl_parser__ast__tests__type_custom.snap
---
source: src/ast.rs
expression: "rules::type_(input, &lookup(input))?"

---
Type(
  name: "TypeName",
  kind: Custom,
  generic_types: [],
  definition: None,
  symbol_range: Range(
    start: Position(
      offset: 0,
      line_col: (1, 1),
    ),
    end: Position(
      offset: 8,
      line_col: (1, 9),
    ),
  ),
)
