src/snapshots/aidl_parser__ast__tests__type_invalid.snap
---
source: src/ast.rs
expression: "rules::type_(input, &lookup(input), &mut diagnostics)?"

---
Type(
  name: "tchou_tchou.",
  kind: Invalid,
  generic_types: [],
  definition: None,
  symbol_range: "...",
)
