src/snapshots/aidl_parser__ast__tests__type_list.snap
---
source: src/ast.rs
expression: "rules::type_(input, &lookup(input))?"

---
Type(
  name: "List",
  kind: List,
  generic_types: [
    Type(
      name: "MyObject",
      kind: Custom,
      generic_types: [],
      definition: None,
      symbol_range: "...",
    ),
  ],
  definition: None,
  symbol_range: "...",
)
